# lukewarm

./: .gitignore  README.md  architecture_research.md  infrastructure_considerations.md  pyproject.toml  status.md
infra/: Dockerfile.hive-metastore  docker-compose.yml  local_infra_setup.md
infra/config/hive/: hive-site.xml
infra/config/trino/catalog/: iceberg.properties
infra/helm/stackable/: hive.yaml  kafka.yaml  spark.yaml  trino.yaml  zookeeper.yaml
infra/helm/values/: minio-values.yaml  postgresql-values.yaml
jobs/: ticker_to_iceberg.py
lukewarm/: __init__.py  cli.py
lukewarm/materializer/: __init__.py
lukewarm/metadata/: __init__.py
lukewarm/models/: __init__.py
lukewarm/rewriter/: __init__.py
lukewarm/scheduler/: __init__.py
models/: example.sql  top_movers.sql
producers/: binance_ticker.py
scripts/: init_crypto_schema.sql  start_pipeline.sh  stop_pipeline.sh
